Fix font on small screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
   margin-bottom: 20px;
 }
 
+h1 {
+  font-size: 24px;
+}
+
 h2 {
   font-size: 20px;
 }
@@ -49,6 +53,18 @@ body {
 .width {
   margin-left: 20px;
   margin-right: 20px;
+}
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+  h3 {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 1100px) {
